--- a/view/addIncome.html
+++ b/view/addIncome.html
@@ -5,7 +5,7 @@
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <link rel="stylesheet" href="../src/style.css">
           
-          <title>Add expense</title>
+          <title>Add Income</title>
           <script src="../controllers/addIncome.js"  async defer></script>
 </head>
 <body>
@@ -15,7 +15,8 @@
           <main>
                     
                     <!-- Title -->
-                    <h1 style="margin-left: 15%;">Add  Income Transactions</h1>
+                    <h1 style="margin-left: 15%; background-color: #3a97ee69;
+                    border-radius: 10px; box-shadow: 0 8px 12px 0 rgba(0,0,0,0.2); padding-inline: 5px;" >Add Income</h1>
 
                     <!-- Side navigation -->
                     <div class="sidenav">
