--- a/view/notification.html
+++ b/view/notification.html
@@ -13,7 +13,8 @@
           <div class="header1"> Notification</div><br>
       <main>
           <!-- Title -->
-          <h1 style="margin-left: 15%;">Notification</h1>
+          <h1 style="margin-left: 15%; background-color: #3a97ee69;
+                    border-radius: 10px; box-shadow: 0 8px 12px 0 rgba(0,0,0,0.2); padding-inline: 5px;" >Notification</h1>
           
           <!-- Side navigation -->
           <div class="sidenav">
@@ -35,7 +36,7 @@
                     <strong>Danger!</strong> <span id="dangerText"></span>
                     </div>
                     
-                    <!-- <div class="alert success">
+                    <div class="alert success">
                     <span class="closebtn">&times;</span>  
                     <strong>Success!</strong> Indicates a successful or positive action.
                     </div>
@@ -48,7 +49,7 @@
                     <div class="alert warning">
                     <span class="closebtn">&times;</span>  
                     <strong>Warning!</strong> Indicates a warning that might need attention.
-                    </div> -->
+                    </div> 
           </div>
 
       </main>   
