--- a/view/addExpense.html
+++ b/view/addExpense.html
@@ -15,7 +15,8 @@
           <main>
                     
                     <!-- Title -->
-                    <h1 style="margin-left: 15%;">Add Transactions</h1>
+                    <h1 style="margin-left: 15%; background-color: #3a97ee69;
+                    border-radius: 10px; box-shadow: 0 8px 12px 0 rgba(0,0,0,0.2); padding-inline: 5px;" >Add Expense</h1>
 
                     <!-- Side navigation -->
                     <div class="sidenav">
