--- a/view/dashboard.html
+++ b/view/dashboard.html
@@ -48,7 +48,7 @@
 
           <!-- Header -->
           <div class="header1"> Dashboard
-                    <a href="https://sample24.auth.us-east-1.amazoncognito.com/logout?client_id=30mnk3d72grk2lpjs2kpas2ler&logout_uri=http://localhost:5500/logout.html">log out</a>
+                    <a href="https://haushaltsbuch.auth.eu-central-1.amazoncognito.com/logout?client_id=36ukforb8bgvv50gq35kmev9qb&logout_uri=https://main.d20ldbddf5hcx2.amplifyapp.com/homepage.html">log out</a>
           </div><br>
 <main>
         <div class="title">
