Edit search field Category

--- a/view/transaction.html
+++ b/view/transaction.html
@@ -57,14 +57,14 @@
                                         </select>
                                       </th>
                                       <th >Category 
-                                        <!-- <input type="text" id="categoryFilter" placeholder="Filter by Category" oninput="filterTable('category', this.value)"> -->
-                                        <select  id="categoryFilter" type="text" oninput="filterTable(this.value, this.value)">
+                                        <input type="text" id="categoryFilter" placeholder="Filter by Category" oninput="filterTable('category', this.value)">
+                                        <!-- <select  id="categoryFilter" type="text" oninput="filterTable(this.value, this.value)">
                                                   <option value="">All Categories</option>
                                                   <option value="groceries">Groceries</option>
                                                   <option value="car">Car</option>
                                                   <option value="house">House</option>
                                                   <option value="entertainment">Entertainment</option>
-                                        </select>
+                                        </select> -->
                                                 
                                       </th>
                                       <th>Comment</th>
